mool/tests/compile/fail/variable_type_mismatch.stderr
error[E0308]: mismatched types
  --> tests/compile/fail/variable_type_mismatch.rs:14:20
   |
14 |         .bind(&id, "wrong".to_string());
   |          ----      ^^^^^^^^^^^^^^^^^^^ expected `i64`, found `String`
   |          |
   |          arguments to this method are incorrect
   |
note: method defined here
  --> src/queries/scope.rs
   |
   |     pub fn bind<T>(mut self, var: &Var<T>, value: T) -> Self
   |            ^^^^
